fix: v-sidebar collapse icon padding bug

--- a/src/style/v-sidebar.scss
+++ b/src/style/v-sidebar.scss
@@ -92,6 +92,14 @@
     }
 
     .el-menu--vertical {
+      .el-menu-tooltip__trigger {
+        padding: 0 !important;
+
+        .icon {
+          margin-left: 18px;
+        }
+      }
+
       .el-sub-menu {
         overflow: hidden;
       }
